# Python

./: .gitignore  CODE_OF_CONDUCT.md  COMPLETE_PACKAGE_INDEX.md  COMPLETION_SUMMARY.txt  CONTRIBUTING.md  DELIVERY_SUMMARY.md  FINAL_VERIFICATION.py  IDE_RECORDER_PROJECT.txt  README.md  TRANSFORMATION_SUMMARY.md  custom.py  ide_recorder_cli.py  mypy.ini  project_plan.md  pyproject.toml  sora_client.py  sora_prompt.txt  sora_prompt_generator.py  test_sora_system.py
.github/: copilot-instructions.md
Docs/: AGENT_PROMPT.md  IDE_RECORDER_QUICKSTART.md  IDE_RECORDER_README.md  INDEX.md  PACKAGING_READINESS_REPORT.md  SORA_QUICKSTART.txt  SORA_WORKFLOW.md
hello/: .flake8  00_START_HERE.md  00_TESTING_COMPLETE.md  Dockerfile  FINAL_PACKAGING_COMPLETE.txt  IDE_RECORDER_DELIVERY.txt  IDE_RECORDER_INDEX.md  OPTIMIZATION_REPORT.md  PACKAGING_SUMMARY.txt  QUICKSTART.md  README.md  SIMULATION_SCENARIOS_ANALYSIS.md  SORA_COMPLETION_SUMMARY.md  SORA_FILE_INDEX.md  SORA_INTEGRATION_GUIDE.md  SORA_PROJECT_INDEX.md  SORA_README.md  VARIANT_SIMULATION.md  prompt_builder.py  requirements.txt  run_variant_simulation.py  simulation_results.json  sora_budget_report.txt  sora_integration.py  youtube_simulation_results.json  youtube_video_simulation.py
hello/src/: __init__.py  logger.py
hello/src/ide_recorder/: __init__.py  config.py  timeline.py  uploader.py
hello/tests/: test_dice.py
src/: dice.py  main.py
src/ide_recorder/: events.py  narrator.py  recorder.py  video_processor.py
tests/: __init__.py  conftest.py
