[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hello-app"
version = "1.0.0"
description = "Enterprise-grade dice rolling application"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Your Organization"}]
keywords = ["dice", "random", "cli", "utility"]

dependencies = [
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "flake8>=6.1.0",
    "black>=23.12.1",
    "ruff>=0.1.11",
    "isort>=5.13.2",
    "mypy>=1.7.1",
]

[project.scripts]
hello-app = "src.main:main"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "N"]
ignore = ["E203", "W503"]
target-version = "py39"

[tool.ruff.isort]
profile = "black"

[tool.isort]
profile = "black"
line_length = 88
use_parentheses = true
include_trailing_comma = true

